crates/au-cli/tests/it/snapshots/it__scenarios__body-required-but-yaml-only-instance.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "body-required-but-yaml-only-instance",
      "message": "instance's type declares a `body:` template, but the instance is yaml-only (must be markdown)",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/body-required-but-yaml-only-instance/decision.yaml",
        "line_col": {
          "end": {
            "col": 1,
            "line": 3
          },
          "start": {
            "col": 1,
            "line": 1
          }
        },
        "range": {
          "end": 55,
          "start": 0
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 42,
                        "line_col": {
                          "end": {
                            "col": 43,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-required-but-yaml-only-instance/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-required-but-yaml-only-instance"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-required-but-yaml-only-instance"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-required-but-yaml-only-instance/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": null,
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/body-required-but-yaml-only-instance/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 54,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 2
                          },
                          "start": {
                            "col": 14,
                            "line": 2
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/body-required-but-yaml-only-instance/decision.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/body-required-but-yaml-only-instance/decision.yaml",
        "section_presence": [
          {
            "depth": 1,
            "name": "Why",
            "optional": false,
            "path": [
              "Why"
            ],
            "present": false
          }
        ]
      }
    ]
  }
}
