crates/au-cli/tests/it/snapshots/it__scenarios__body-scalar-shape-checked.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "field-shape-mismatch",
      "message": "field 'pages' value does not match declared shape Number",
      "related": [
        {
          "file": "<root>/scenarios/body-scalar-shape-checked/type/reading.type.yaml",
          "line_col": {
            "end": {
              "col": 16,
              "line": 4
            },
            "start": {
              "col": 10,
              "line": 4
            }
          },
          "range": {
            "end": 99,
            "start": 93
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/body-scalar-shape-checked/piece.md",
        "line_col": {
          "end": {
            "col": 31,
            "line": 9
          },
          "start": {
            "col": 1,
            "line": 9
          }
        },
        "range": {
          "end": 88,
          "start": 58
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 31,
                        "line_col": {
                          "end": {
                            "col": 32,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-scalar-shape-checked/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-scalar-shape-checked"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-scalar-shape-checked"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-scalar-shape-checked/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 57,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 49
            },
            "text": "Pages"
          },
          {
            "content": "[:pages] not a number at all",
            "kind": "inline_code",
            "span": {
              "end": 88,
              "line_col": {
                "end": {
                  "col": 31,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 58
            }
          },
          {
            "content": "Number",
            "kind": "inline_code",
            "span": {
              "end": 203,
              "line_col": {
                "end": {
                  "col": 37,
                  "line": 12
                },
                "start": {
                  "col": 29,
                  "line": 12
                }
              },
              "start": 195
            }
          }
        ],
        "claim": [
          "reading"
        ],
        "closure": [
          "reading"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "pages",
            "origins": [
              {
                "name": "reading",
                "origin_path": "<root>/scenarios/body-scalar-shape-checked/type/reading.type.yaml",
                "required": true,
                "shape": "Number"
              }
            ],
            "required": true,
            "shape": "Number"
          },
          {
            "divergent": false,
            "field": "title",
            "origins": [
              {
                "name": "reading",
                "origin_path": "<root>/scenarios/body-scalar-shape-checked/type/reading.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 88,
                        "line_col": {
                          "end": {
                            "col": 31,
                            "line": 9
                          },
                          "start": {
                            "col": 1,
                            "line": 9
                          }
                        },
                        "start": 58
                      },
                      "file": "<root>/scenarios/body-scalar-shape-checked/piece.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Pages"
                      }
                    ],
                    "surface": "body_inline_code",
                    "value": {
                      "kind": "scalar",
                      "value": "not a number at all"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "not a number at all"
                }
              }
            ],
            "field": "pages"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 36,
                        "line_col": {
                          "end": {
                            "col": 19,
                            "line": 3
                          },
                          "start": {
                            "col": 8,
                            "line": 3
                          }
                        },
                        "start": 25
                      },
                      "file": "<root>/scenarios/body-scalar-shape-checked/piece.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "On fences"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "On fences"
                }
              }
            ],
            "field": "title"
          }
        ],
        "file": "<root>/scenarios/body-scalar-shape-checked/piece.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Pages",
            "optional": false,
            "path": [
              "Pages"
            ],
            "present": true,
            "span": {
              "end": 57,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 49
            }
          }
        ]
      }
    ]
  }
}
